--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,3 +12,9 @@
     grid-template-columns: repeat(5, minmax(0, 1fr));
   }
 }
+
+@media screen and (max-width: 768px) {
+  .flex {
+    flex-direction: column;
+  }
+}
